k8s.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-k8s.yml -o k8s.yaml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: app1
  name: app1
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: app1

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-k8s.yml -o k8s.yaml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: app2
  name: app2
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: app2

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-k8s.yml -o k8s.yaml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
    - name: "81"
      port: 81
      targetPort: 81
    - name: "82"
      port: 82
      targetPort: 82
  selector:
    io.kompose.service: nginx

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-k8s.yml -o k8s.yaml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: app1
  name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app1
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-k8s.yml -o k8s.yaml
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: app1
    spec:
      containers:
        - image: k8s-laravel-app1:latest
          name: app1
          imagePullPolicy: Never
          ports:
            - containerPort: 9000
              protocol: TCP
      restartPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-k8s.yml -o k8s.yaml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: app2
  name: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app2
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-k8s.yml -o k8s.yaml
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: app2
    spec:
      containers:
        - image: k8s-laravel-app2:latest
          imagePullPolicy: Never
          name: app2
          ports:
            - containerPort: 9000
              protocol: TCP
      restartPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-k8s.yml -o k8s.yaml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-k8s.yml -o k8s.yaml
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: nginx
    spec:
      containers:
        - image: k8s-laravel-nginx:latest
          imagePullPolicy: Never
          name: nginx
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-cm0
              subPath: nginx.conf
            - mountPath: /etc/nginx/conf.d/default.conf
              name: nginx-cm1
              subPath: default.conf
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: nginx.conf
                path: nginx.conf
            name: nginx-cm0
          name: nginx-cm0
        - configMap:
            items:
              - key: app1.conf
                path: default.conf
            name: nginx-cm1
          name: nginx-cm1
